Refactor, rename, update tests

--- a/sandbox/DB.ipynb
+++ b/sandbox/DB.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DB.open('pytest')"
+    "DB.open('foo')"
    ]
   },
   {
@@ -52,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "acct = Account(name='equity', group='equity')"
+    "acct = Account(name='equity', group='Q')"
    ]
   },
   {
@@ -122,7 +122,7 @@
     {
      "data": {
       "text/plain": [
-       "[<Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>]"
+       "[<Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>]"
       ]
      },
      "execution_count": 5,
@@ -227,7 +227,7 @@
     {
      "data": {
       "text/plain": [
-       "Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True, read_preference=Primary(), uuidrepresentation=4, driver=DriverInfo(name='MongoEngine', version='0.29.1', platform=None)), 'pytest')"
+       "Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True, read_preference=Primary(), uuidrepresentation=4, driver=DriverInfo(name='MongoEngine', version='0.29.1', platform=None)), 'foo')"
       ]
      },
      "execution_count": 10,
@@ -256,7 +256,7 @@
     {
      "data": {
       "text/plain": [
-       "Collection(Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True, read_preference=Primary(), uuidrepresentation=4, driver=DriverInfo(name='MongoEngine', version='0.29.1', platform=None)), 'pytest'), 'account')"
+       "Collection(Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True, read_preference=Primary(), uuidrepresentation=4, driver=DriverInfo(name='MongoEngine', version='0.29.1', platform=None)), 'foo'), 'account')"
       ]
      },
      "execution_count": 12,
@@ -276,9 +276,7 @@
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('67cb8a1503f02a51e5a4f2d5'),\n",
-       " 'name': 'equity',\n",
-       " 'group': 'equity'}"
+       "{'_id': ObjectId('67d0beacedddc777a19856d0'), 'name': 'equity', 'group': 'Q'}"
       ]
      },
      "execution_count": 13,
@@ -532,7 +530,7 @@
     {
      "data": {
       "text/plain": [
-       "Collection(Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True, read_preference=Primary(), uuidrepresentation=4, driver=DriverInfo(name='MongoEngine', version='0.29.1', platform=None)), 'pytest'), 'stats')"
+       "Collection(Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True, read_preference=Primary(), uuidrepresentation=4, driver=DriverInfo(name='MongoEngine', version='0.29.1', platform=None)), 'foo'), 'stats')"
       ]
      },
      "execution_count": 24,
@@ -552,7 +550,7 @@
     {
      "data": {
       "text/plain": [
-       "<bound method Collection.find_one of Collection(Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True, read_preference=Primary(), uuidrepresentation=4, driver=DriverInfo(name='MongoEngine', version='0.29.1', platform=None)), 'pytest'), 'stats')>"
+       "<bound method Collection.find_one of Collection(Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True, read_preference=Primary(), uuidrepresentation=4, driver=DriverInfo(name='MongoEngine', version='0.29.1', platform=None)), 'foo'), 'stats')>"
       ]
      },
      "execution_count": 25,
@@ -592,7 +590,7 @@
     {
      "data": {
       "text/plain": [
-       "{'n': 17, 'ok': 1.0}"
+       "{'n': 12, 'ok': 1.0}"
       ]
      },
      "execution_count": 27,
@@ -618,9 +616,9 @@
        " 'maxBsonObjectSize': 16777216,\n",
        " 'maxMessageSizeBytes': 48000000,\n",
        " 'maxWriteBatchSize': 100000,\n",
-       " 'localTime': datetime.datetime(2025, 3, 10, 17, 41, 52, 135000),\n",
+       " 'localTime': datetime.datetime(2025, 3, 11, 22, 53, 24, 483000),\n",
        " 'logicalSessionTimeoutMinutes': 30,\n",
-       " 'connectionId': 435,\n",
+       " 'connectionId': 558,\n",
        " 'minWireVersion': 0,\n",
        " 'maxWireVersion': 25,\n",
        " 'readOnly': False,\n",
@@ -644,7 +642,7 @@
     {
      "data": {
       "text/plain": [
-       "{'system': {'currentTime': datetime.datetime(2025, 3, 10, 17, 41, 52, 139000),\n",
+       "{'system': {'currentTime': datetime.datetime(2025, 3, 11, 22, 53, 24, 487000),\n",
        "  'hostname': 'cthulhu.local',\n",
        "  'cpuAddrSize': 64,\n",
        "  'memSizeMB': 65536,\n",
@@ -759,14 +757,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-01-07 expenses:groceries 75.0 EntryType.dr\n",
-      "2024-01-07 assets:checking 75.0 EntryType.cr\n",
-      "2024-01-21 expenses:groceries 175.0 EntryType.dr\n",
-      "2024-01-21 liabilities:visa 175.0 EntryType.cr\n",
-      "2024-02-07 expenses:groceries 75.0 EntryType.dr\n",
-      "2024-02-07 assets:checking 75.0 EntryType.cr\n",
-      "2024-02-21 expenses:groceries 75.0 EntryType.dr\n",
-      "2024-02-21 liabilities:visa 75.0 EntryType.cr\n"
+      "2024-01-07 groceries 75.0 EntryType.dr\n",
+      "2024-01-07 checking 75.0 EntryType.cr\n",
+      "2024-01-21 groceries 175.0 EntryType.dr\n",
+      "2024-01-21 visa 175.0 EntryType.cr\n",
+      "2024-02-07 groceries 75.0 EntryType.dr\n",
+      "2024-02-07 checking 75.0 EntryType.cr\n",
+      "2024-02-21 groceries 75.0 EntryType.dr\n",
+      "2024-02-21 visa 75.0 EntryType.cr\n"
      ]
     }
    ],
@@ -785,10 +783,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'expenses:groceries', 'assets:checking'}\n",
-      "{'liabilities:visa', 'expenses:groceries'}\n",
-      "{'expenses:groceries', 'assets:checking'}\n",
-      "{'liabilities:visa', 'expenses:groceries'}\n"
+      "{'checking', 'groceries'}\n",
+      "{'visa', 'groceries'}\n",
+      "{'checking', 'groceries'}\n",
+      "{'visa', 'groceries'}\n"
      ]
     }
    ],
@@ -799,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -815,12 +813,12 @@
    ],
    "source": [
     "for t in Transaction.objects(description='Safeway'):\n",
-    "    print(t.amount)"
+    "    print(t.pamount)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -836,12 +834,12 @@
    ],
    "source": [
     "for t in Transaction.objects(description='Safeway'):\n",
-    "    print(t.date, type(t.date))"
+    "    print(t.pdate, type(t.pdate))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -871,16 +869,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'{\"_id\": {\"$oid\": \"67cb8a1503f02a51e5a4f30e\"}, \"description\": \"Safeway\", \"comment\": \"weekly groceries\", \"tags\": [], \"entries\": [{\"$oid\": \"67cb8a1503f02a51e5a4f2f8\"}, {\"$oid\": \"67cb8a1503f02a51e5a4f2f9\"}]}'"
+       "'{\"_id\": {\"$oid\": \"67d0beacedddc777a198570b\"}, \"description\": \"Safeway\", \"comment\": \"weekly groceries\", \"tags\": [], \"entries\": [{\"$oid\": \"67d0beacedddc777a19856f5\"}, {\"$oid\": \"67d0beacedddc777a19856f6\"}], \"pdate\": {\"$date\": 1704585600000}, \"pdebit\": \"groceries\", \"pcredit\": \"checking\", \"pamount\": 75.0}'"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -891,12 +889,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "lst[1].comment"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "175.0"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst[1].pamount"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.date(2024, 1, 21)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst[1].pdate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(Transaction.objects(amount__lt=175.0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -907,28 +961,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2024-01-02 paycheck\n",
-      "2024-01-02 fill buckets\n",
-      "2024-02-02 paycheck\n",
-      "2024-02-02 fill buckets\n",
-      "2024-01-05 car payment\n",
-      "2024-02-05 car payment\n",
-      "2024-01-10 Shell Oil\n",
-      "2024-02-26 Shell Oil\n",
-      "2024-01-07 Safeway\n",
-      "2024-01-21 Safeway\n",
-      "2024-02-07 Safeway\n",
-      "2024-02-21 Safeway\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for t in Transaction.objects(description__gte='Safeway'):\n",
     "    print(t.date, t.description)"
@@ -936,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -954,7 +989,7 @@
    ],
    "source": [
     "for t in Transaction.objects(description__regex='^S'):\n",
-    "    print(t.date, t.description)"
+    "    print(t.pdate, t.description)"
    ]
   },
   {
@@ -966,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -988,7 +1023,7 @@
    ],
    "source": [
     "for t in Transaction.objects(description__regex=r'\\s'):\n",
-    "    print(t.date, t.description, t.amount)"
+    "    print(t.pdate, t.description, t.pamount)"
    ]
   },
   {
@@ -1000,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1009,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1027,12 +1062,12 @@
    ],
    "source": [
     "for t in Transaction.objects(Q(description__regex=r'^S')):\n",
-    "    print(t.date, t.description)"
+    "    print(t.pdate, t.description)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1046,7 +1081,7 @@
    ],
    "source": [
     "for t in Transaction.objects(Q(description__regex=r'^S') & Q(description__regex=r'\\s')):\n",
-    "    print(t.date, t.description)"
+    "    print(t.pdate, t.description)"
    ]
   },
   {
@@ -1058,21 +1093,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "liabilities:visa\n",
-      "expenses:groceries\n",
-      "expenses:mortgage\n",
-      "expenses:car\n",
-      "expenses:travel\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for a in Account.nominal_accounts:\n",
     "    print(a.name)"
@@ -1080,17 +1103,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "assets:checking\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for a in Account.objects.expense_accounts('assets'):\n",
     "    print(a.name)"
@@ -1103,20 +1118,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "expenses:groceries\n",
-      "expenses:mortgage\n",
-      "expenses:car\n",
-      "expenses:travel\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for a in Account.objects.expense_accounts('expenses'):\n",
     "    print(a.name)"
@@ -1131,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1140,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1149,7 +1153,7 @@
        "Q(**{'description__regex': '^S'})"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1160,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1169,7 +1173,7 @@
        "mongoengine.queryset.visitor.Q"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1180,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1189,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1198,7 +1202,7 @@
        "(Q(**{'description__regex': '\\\\s'}) & Q(**{'description__regex': '^S'}))"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1209,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1223,7 +1227,77 @@
    ],
    "source": [
     "for t in Transaction.objects(p & q):\n",
-    "    print(t.date, t.description)"
+    "    print(t.pdate, t.description)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lst = DB.select(description = 'Safeway')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-01-07 75.0 checking groceries Safeway\n",
+      "2024-01-21 175.0 visa groceries Safeway\n",
+      "2024-02-07 75.0 checking groceries Safeway\n",
+      "2024-02-21 75.0 visa groceries Safeway\n"
+     ]
+    }
+   ],
+   "source": [
+    "for t in lst:\n",
+    "    print(t.pdate, t.pamount, t.pcredit, t.pdebit, t.description)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-01-07 75.0 checking groceries Safeway\n",
+      "2024-02-07 75.0 checking groceries Safeway\n",
+      "2024-02-21 75.0 visa groceries Safeway\n"
+     ]
+    }
+   ],
+   "source": [
+    "for t in DB.select(description = 'Safeway', amount=75):\n",
+    "    print(t.pdate, t.pamount, t.pcredit, t.pdebit, t.description)"
    ]
   },
   {
