First version of DB.select, with date constraints

--- a/sandbox/DB.ipynb
+++ b/sandbox/DB.ipynb
@@ -122,7 +122,7 @@
     {
      "data": {
       "text/plain": [
-       "[<Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>]"
+       "[<Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>]"
       ]
      },
      "execution_count": 5,
@@ -590,7 +590,7 @@
     {
      "data": {
       "text/plain": [
-       "{'n': 12, 'ok': 1.0}"
+       "{'n': 14, 'ok': 1.0}"
       ]
      },
      "execution_count": 27,
@@ -616,9 +616,9 @@
        " 'maxBsonObjectSize': 16777216,\n",
        " 'maxMessageSizeBytes': 48000000,\n",
        " 'maxWriteBatchSize': 100000,\n",
-       " 'localTime': datetime.datetime(2025, 3, 11, 22, 53, 24, 483000),\n",
+       " 'localTime': datetime.datetime(2025, 3, 12, 15, 34, 34, 783000),\n",
        " 'logicalSessionTimeoutMinutes': 30,\n",
-       " 'connectionId': 558,\n",
+       " 'connectionId': 570,\n",
        " 'minWireVersion': 0,\n",
        " 'maxWireVersion': 25,\n",
        " 'readOnly': False,\n",
@@ -642,7 +642,7 @@
     {
      "data": {
       "text/plain": [
-       "{'system': {'currentTime': datetime.datetime(2025, 3, 11, 22, 53, 24, 487000),\n",
+       "{'system': {'currentTime': datetime.datetime(2025, 3, 12, 15, 34, 34, 788000),\n",
        "  'hostname': 'cthulhu.local',\n",
        "  'cpuAddrSize': 64,\n",
        "  'memSizeMB': 65536,\n",
@@ -783,10 +783,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'checking', 'groceries'}\n",
-      "{'visa', 'groceries'}\n",
-      "{'checking', 'groceries'}\n",
-      "{'visa', 'groceries'}\n"
+      "{'groceries', 'checking'}\n",
+      "{'groceries', 'visa'}\n",
+      "{'groceries', 'checking'}\n",
+      "{'groceries', 'visa'}\n"
      ]
     }
    ],
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -878,7 +878,7 @@
        "'{\"_id\": {\"$oid\": \"67d0beacedddc777a198570b\"}, \"description\": \"Safeway\", \"comment\": \"weekly groceries\", \"tags\": [], \"entries\": [{\"$oid\": \"67d0beacedddc777a19856f5\"}, {\"$oid\": \"67d0beacedddc777a19856f6\"}], \"pdate\": {\"$date\": 1704585600000}, \"pdebit\": \"groceries\", \"pcredit\": \"checking\", \"pamount\": 75.0}'"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +907,7 @@
        "175.0"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -918,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -927,7 +927,7 @@
        "datetime.date(2024, 1, 21)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -938,11 +938,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<Transaction: Transaction object>,\n",
+       " <Transaction: Transaction object>,\n",
+       " <Transaction: Transaction object>,\n",
+       " <Transaction: Transaction object>,\n",
+       " <Transaction: Transaction object>,\n",
+       " <Transaction: Transaction object>,\n",
+       " <Transaction: Transaction object>]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "list(Transaction.objects(amount__lt=175.0))"
+    "list(Transaction.objects(pamount__lt=175.0))"
    ]
   },
   {
@@ -961,12 +978,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-01-02 paycheck\n",
+      "2024-01-02 fill buckets\n",
+      "2024-02-02 paycheck\n",
+      "2024-02-02 fill buckets\n",
+      "2024-01-05 car payment\n",
+      "2024-02-05 car payment\n",
+      "2024-01-10 Shell Oil\n",
+      "2024-02-26 Shell Oil\n",
+      "2024-01-07 Safeway\n",
+      "2024-01-21 Safeway\n",
+      "2024-02-07 Safeway\n",
+      "2024-02-21 Safeway\n"
+     ]
+    }
+   ],
    "source": [
     "for t in Transaction.objects(description__gte='Safeway'):\n",
-    "    print(t.date, t.description)"
+    "    print(t.pdate, t.description)"
    ]
   },
   {
@@ -1067,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1093,36 +1129,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "amex\n",
+      "visa\n",
+      "groceries\n",
+      "household\n",
+      "mortgage\n",
+      "car\n",
+      "travel\n"
+     ]
+    }
+   ],
    "source": [
     "for a in Account.nominal_accounts:\n",
-    "    print(a.name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for a in Account.objects.expense_accounts('assets'):\n",
-    "    print(a.name)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for a in Account.objects.expense_accounts('expenses'):\n",
     "    print(a.name)"
    ]
   },
@@ -1135,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1144,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1153,7 +1178,7 @@
        "Q(**{'description__regex': '^S'})"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1164,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1173,7 +1198,7 @@
        "mongoengine.queryset.visitor.Q"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1184,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1193,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1202,7 +1227,7 @@
        "(Q(**{'description__regex': '\\\\s'}) & Q(**{'description__regex': '^S'}))"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1213,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1232,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1241,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1250,7 +1275,7 @@
        "4"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1261,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1282,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1301,10 +1326,105 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create Q object using dictionaries"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "dct = {'description__regex': r'^S'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Q(**{'description__regex': '^S'})"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Q(**dct)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Can an object have multiple constraints?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dct = {'description__regex': r'^S', 'pamount__gt': 100}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Q(**{'description__regex': '^S', 'pamount__gt': 100})"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Q(**dct)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-01-21 Safeway 175.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for t in Transaction.objects(Q(**dct)):\n",
+    "    print(t.pdate, t.description, t.pamount)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Yep!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
