Complete implementation of DB.select, unit tests for DB.select

--- a/sandbox/DB.ipynb
+++ b/sandbox/DB.ipynb
@@ -20,7 +20,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dexter.DB import DB, Account, Entry, Transaction"
+    "from dexter.DB import DB, Account, Entry, Transaction\n",
+    "\n",
+    "from datetime import date"
    ]
   },
   {
@@ -122,7 +124,7 @@
     {
      "data": {
       "text/plain": [
-       "[<Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>]"
+       "[<Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, <Account: Account object>, '...(remaining elements truncated)...']"
       ]
      },
      "execution_count": 5,
@@ -590,7 +592,7 @@
     {
      "data": {
       "text/plain": [
-       "{'n': 14, 'ok': 1.0}"
+       "{'n': 21, 'ok': 1.0}"
       ]
      },
      "execution_count": 27,
@@ -616,9 +618,9 @@
        " 'maxBsonObjectSize': 16777216,\n",
        " 'maxMessageSizeBytes': 48000000,\n",
        " 'maxWriteBatchSize': 100000,\n",
-       " 'localTime': datetime.datetime(2025, 3, 12, 15, 34, 34, 783000),\n",
+       " 'localTime': datetime.datetime(2025, 3, 13, 1, 35, 20, 782000),\n",
        " 'logicalSessionTimeoutMinutes': 30,\n",
-       " 'connectionId': 570,\n",
+       " 'connectionId': 591,\n",
        " 'minWireVersion': 0,\n",
        " 'maxWireVersion': 25,\n",
        " 'readOnly': False,\n",
@@ -642,7 +644,7 @@
     {
      "data": {
       "text/plain": [
-       "{'system': {'currentTime': datetime.datetime(2025, 3, 12, 15, 34, 34, 788000),\n",
+       "{'system': {'currentTime': datetime.datetime(2025, 3, 13, 1, 35, 20, 786000),\n",
        "  'hostname': 'cthulhu.local',\n",
        "  'cpuAddrSize': 64,\n",
        "  'memSizeMB': 65536,\n",
@@ -783,10 +785,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'groceries', 'checking'}\n",
-      "{'groceries', 'visa'}\n",
-      "{'groceries', 'checking'}\n",
-      "{'groceries', 'visa'}\n"
+      "{'checking', 'groceries'}\n",
+      "{'visa', 'groceries'}\n",
+      "{'checking', 'groceries'}\n",
+      "{'visa', 'groceries'}\n"
      ]
     }
    ],
@@ -964,10 +966,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-01-02 5000.0 checking yoyodyne\n",
+      "2024-01-02 5000.0 yoyodyne groceries/mortgage/car/travel\n"
+     ]
+    }
+   ],
+   "source": [
+    "for t in Transaction.objects(pdate=date(2024,1,2)):\n",
+    "    print(t.pdate, t.pamount, t.pdebit, t.pcredit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-01-02 5000.0 checking yoyodyne\n",
+      "2024-01-02 5000.0 yoyodyne groceries/mortgage/car/travel\n"
+     ]
+    }
+   ],
+   "source": [
+    "for t in Transaction.objects(pdate__lte=date(2024,1,2)):\n",
+    "    print(t.pdate, t.pamount, t.pdebit, t.pcredit)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -978,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1007,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1037,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1071,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1080,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1103,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1129,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1256,12 +1289,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create Q object using dictionaries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lst = DB.select(description = 'Safeway')"
+    "dct = {'description__regex': r'^S'}"
    ]
   },
   {
@@ -1272,87 +1312,10 @@
     {
      "data": {
       "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(lst)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2024-01-07 75.0 checking groceries Safeway\n",
-      "2024-01-21 175.0 visa groceries Safeway\n",
-      "2024-02-07 75.0 checking groceries Safeway\n",
-      "2024-02-21 75.0 visa groceries Safeway\n"
-     ]
-    }
-   ],
-   "source": [
-    "for t in lst:\n",
-    "    print(t.pdate, t.pamount, t.pcredit, t.pdebit, t.description)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2024-01-07 75.0 checking groceries Safeway\n",
-      "2024-02-07 75.0 checking groceries Safeway\n",
-      "2024-02-21 75.0 visa groceries Safeway\n"
-     ]
-    }
-   ],
-   "source": [
-    "for t in DB.select(description = 'Safeway', amount=75):\n",
-    "    print(t.pdate, t.pamount, t.pcredit, t.pdebit, t.description)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Create Q object using dictionaries"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dct = {'description__regex': r'^S'}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
        "Q(**{'description__regex': '^S'})"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1370,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1379,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1388,7 +1351,7 @@
        "Q(**{'description__regex': '^S', 'pamount__gt': 100})"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1399,7 +1362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1425,6 +1388,79 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Select Method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-01-21 175.0 visa groceries\n"
+     ]
+    }
+   ],
+   "source": [
+    "for t in DB.select(Transaction, date=date(2024,1,21)):\n",
+    "    print(t.pdate, t.pamount, t.pcredit, t.pdebit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-02-02 5000.0 yoyodyne checking\n",
+      "2024-02-02 5000.0 groceries/mortgage/car/travel yoyodyne\n",
+      "2024-02-05 500.0 checking car\n",
+      "2024-02-26 60.0 visa car\n",
+      "2024-02-04 1800.0 checking mortgage\n",
+      "2024-01-21 175.0 visa groceries\n",
+      "2024-02-07 75.0 checking groceries\n",
+      "2024-02-21 75.0 visa groceries\n",
+      "2024-03-10 50.0 amex household\n",
+      "2024-03-12 25.0 household amex\n"
+     ]
+    }
+   ],
+   "source": [
+    "for t in DB.select(Transaction, start_date=date(2024,1,21)):\n",
+    "    print(t.pdate, t.pamount, t.pcredit, t.pdebit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-01-05 car 500.0 EntryType.dr\n",
+      "2024-01-05 checking 500.0 EntryType.cr\n"
+     ]
+    }
+   ],
+   "source": [
+    "for e in DB.select(Entry, date=date(2024,1,5)):\n",
+    "    print(e.date, e.account, e.amount, e.etype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
